--- a/Project.ipynb
+++ b/Project.ipynb
@@ -20,11 +20,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "/Users/MrG/Capstone/Meta/MetaData\n"
+        "/accounts/grad/liy/liy/capstone/Meta/MetaData\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -42,75 +42,30 @@
      "metadata": {},
      "outputs": [
       {
+       "ename": "LookupError",
+       "evalue": "\n**********************************************************************\n  Resource 'corpora/gutenberg' not found.  Please use the NLTK\n  Downloader to obtain the resource:  >>> nltk.download()\n  Searched in:\n    - '/accounts/grad/liy/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n**********************************************************************",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mLookupError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-2-ef59d301c753>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbook\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0m__future__\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdivision\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# import re, pprint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/nltk/book.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m\"Type: 'texts()' or 'sents()' to list the materials.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mtext1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mText\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgutenberg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'melville-moby_dick.txt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m\"text1:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtext1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/nltk/corpus/util.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__getattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__load\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     69\u001b[0m         \u001b[1;31m# This looks circular, but its not, since __load() changes our\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m         \u001b[1;31m# __class__ to something new:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/nltk/corpus/util.pyc\u001b[0m in \u001b[0;36m__load\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     54\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mLookupError\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m                 \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mroot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'corpora/%s'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mzip_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 56\u001b[1;33m                 \u001b[1;32mexcept\u001b[0m \u001b[0mLookupError\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m         \u001b[1;31m# Load the corpus.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mLookupError\u001b[0m: \n**********************************************************************\n  Resource 'corpora/gutenberg' not found.  Please use the NLTK\n  Downloader to obtain the resource:  >>> nltk.download()\n  Searched in:\n    - '/accounts/grad/liy/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n**********************************************************************"
+       ]
+      },
+      {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
         "*** Introductory Examples for the NLTK Book ***\n",
         "Loading text1, ..., text9 and sent1, ..., sent9\n",
         "Type the name of the text or sentence to view it.\n",
-        "Type: 'texts()' or 'sents()' to list the materials.\n",
-        "text1:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Moby Dick by Herman Melville 1851\n",
-        "text2:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Sense and Sensibility by Jane Austen 1811\n",
-        "text3:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " The Book of Genesis\n",
-        "text4:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Inaugural Address Corpus\n",
-        "text5:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Chat Corpus\n",
-        "text6: Monty Python and the Holy Grail\n",
-        "text7:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Wall Street Journal\n",
-        "text8: Personals Corpus\n",
-        "text9:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " The Man Who Was Thursday by G . K . Chesterton 1908\n"
+        "Type: 'texts()' or 'sents()' to list the materials.\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -118,7 +73,7 @@
      "input": [
       "name = pd.read_table(\"Name\", sep = \",\", header = None)\n",
       "name.head()\n",
-      "name[0][2076:2077]"
+      "name[0][2076:2077] #??what does this do?"
      ],
      "language": "python",
      "metadata": {},
@@ -134,6 +89,18 @@
       }
      ],
      "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#test to make sure all names have been imported properly\n",
+      "def test_1():\n",
+      "    assert len(name[0])==2500"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -162,19 +129,24 @@
       "def f(x):\n",
       "    x = datetime.datetime.fromtimestamp(x).strftime('%H')\n",
       "    return int(x)\n",
-      "for i in name[0][0:2500]:\n",
+      "\n",
+      "for i in name[0][0:2500]:  #should it be 0 to 2499?????\n",
       "    original = i\n",
       "    index = i + 'Clean' + '.csv'\n",
-      "    a = pd.read_table(index, sep = \"\\t\")\n",
-      "    a['care_value'] = a['ups'] + a['downs']\n",
-      "    a['karma'] = a['ups'] - a['downs']\n",
+      "    a = pd.read_table(index, sep = \"\\t\") #read in each subreddit CSV file\n",
+      "    a['care_value'] = a['ups'] + a['downs'] #calculate care value from adding up votes and down votes\n",
+      "    a['karma'] = a['ups'] - a['downs'] #calculate karma value using upvotes subtracting down votes\n",
       "    try: \n",
-      "        a['created_utc'] = a['created_utc'].apply(f)\n",
-      "        Time_count[original] = a['created_utc'].value_counts()\n",
+      "        a['created_utc'] = a['created_utc'].apply(f) #convert epoch time to hours\n",
+      "        Time_count[original] = a['created_utc'].value_counts() # count how many posts are created wthin each hour??\n",
       "        temp_karma = pd.DataFrame({'Time': a['created_utc'],'karma': a['karma']})\n",
+      "        #store hour and karma into a data frame\n",
       "        temp_care = pd.DataFrame({'Time': a['created_utc'],'care_value': a['care_value']})\n",
+      "        #store hour and care value to a data frame\n",
       "        Time_karma[original] = temp_karma.groupby('Time', as_index = False).mean()['karma']\n",
+      "        #group by hour, calculate the mean karma value within each hour\n",
       "        Time_care[original] = temp_care.groupby('Time', as_index = False).max()['care_value']\n",
+      "        #group by hour, calculate the max care value within each hour\n",
       "    except: continue\n",
       "Time_karma.drop('Time', axis = 1)\n",
       "Time_care.drop('Time', axis = 1)"
@@ -188,26 +160,57 @@
         "&lt;class 'pandas.core.frame.DataFrame'&gt;\n",
         "Int64Index: 24 entries, 0 to 23\n",
         "Columns: 2498 entries, 0x10c to zooeydeschanel\n",
-        "dtypes: float64(60), int64(2438)\n",
+        "dtypes: float64(63), int64(2435)\n",
         "</pre>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 7,
        "text": [
         "<class 'pandas.core.frame.DataFrame'>\n",
         "Int64Index: 24 entries, 0 to 23\n",
         "Columns: 2498 entries, 0x10c to zooeydeschanel\n",
-        "dtypes: float64(60), int64(2438)"
+        "dtypes: float64(63), int64(2435)"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "def test_2():\n",
+      "    assert len(Time_karma.columns)==2499\n",
+      "    assert Time_karma.shape==(24, 2499) \n",
+      "    if all(Time_karma.Time <24) and all(Time_karma.Time >=0):\n",
+      "        assert True"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def test_3():\n",
+      "    assert len(Time_care.columns)==2499\n",
+      "    assert Time_care.shape==(24, 2499) \n",
+      "    if all(Time_care.Time <24) and all(Time_care.Time >=0):\n",
+      "        assert True\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
       "# Test: The previous code works fairly well since the result is the same compared with the \n",
       "# original data file \"2007scapeClean.csv\"\n",
       "Test = pd.read_table(\"2007scapeClean.csv\")\n",
@@ -500,7 +503,7 @@
      "input": [
       "Date_count = pd.DataFrame({'Time': range(7)})\n",
       "def g(x):\n",
-      "    x = datetime.datetime.fromtimestamp(x).strftime('%w')\n",
+      "    x = datetime.datetime.fromtimestamp(x).strftime('%w') #extract week days\n",
       "    return int(x)\n",
       "for i in name[0][0:2500]:\n",
       "    original = i\n",
@@ -508,40 +511,46 @@
       "    a = pd.read_table(index, sep = \"\\t\")\n",
       "    try: \n",
       "        a['created_utc'] = a['created_utc'].apply(g)\n",
-      "        Date_count[original] = a['created_utc'].value_counts()\n",
+      "        Date_count[original] = a['created_utc'].value_counts() \n",
+      "        #count how many posts are created within each week day\n",
       "    except: continue"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "Date_count.T.sum()"
+      "def test_4():\n",
+      "    assert Date_count.shape==(7, 2501) \n",
+      "    if all(Date_count.Time <7) and all(Date_count.Time  >=0):\n",
+      "        assert True"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Date_count.T.sum() # .T  ???? "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 12,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "0    301386\n",
-        "1    346176\n",
-        "2    348155\n",
-        "3    345552\n",
-        "4    342057\n",
-        "5    311171\n",
-        "6    272621\n",
-        "dtype: float64"
+        "true\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
@@ -776,9 +785,11 @@
       "Top_Content = []\n",
       "Bottom_Title = []\n",
       "Bottom_Content = []\n",
+      "\n",
+      "#############why did we define f twice???\n",
       "def f(x):\n",
       "    x = datetime.datetime.fromtimestamp(x).strftime('%H')\n",
-      "    return int(x)\n",
+      "    return int(x)#I think we can delete this paragraph??\n",
       "for i in name[0][0:2500]:\n",
       "    try:\n",
       "        original = i\n",
@@ -795,7 +806,28 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 58
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def test_5():\n",
+      "    assert len(Top_Title)==len(Top_Content)==len(Bottom_Title)==len(Bottom_Content)==2498"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 64,
+       "text": [
+        "True"
+       ]
+      }
+     ],
+     "prompt_number": 64
     },
     {
      "cell_type": "code",
@@ -1272,17 +1304,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 96,
-       "text": [
-        "<callable-iterator at 0x11227ff50>"
-       ]
-      }
-     ],
-     "prompt_number": 96
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -1358,11 +1381,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "%%file test.py\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 226
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "UsageError: %%file is a cell magic, but the cell body is empty."
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -1378,10 +1411,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "%nose -v -x"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "ERROR: Cell magic `%%nose` not found.\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
     }
    ],
    "metadata": {}
